# csol

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  card.c  card.h  csolrc  game.c  game.h  main.c  rc.c  rc.h  theme.c  theme.h  ui.c  ui.h  yuk.c
doc/: csol.1  csol.6
dos/: Makefile  README.md  build.sh  csolrc
games/: eightoff  freecell  golf  klondike  klondikefc  russian  spider1  spider2  spider4  yukon  yukonfc
src/: card.c  card.h  color.c  color.h  config.h  config.h.in  csolrc  csv.c  csv.h  error.c  error.h  game.c  game.h  main.c  menu.c  menu.h  rc.c  rc.h  scores.c  scores.h  theme.c  theme.h  ui.c  ui.h  util.c  util.h
themes/: ascii  compact  compact-ascii  corners  cp437  default  default-xl  ultracompact
win/: Makefile  README.md  csolrc
